--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -2,14 +2,16 @@ FLAGS := -Wall -Wextra -Werror
 NAME := phonebook
 FILES := Contact.cpp PhoneBook.cpp
 
-all: ${NAME}
+all: $(NAME)
 
-${NAME}: ${FILES}
-	g++ ${FLAGS} ${FILES} -o ${NAME}
+$(NAME): $(FILES)
+	g++ $(FLAGS) $(FILES) -o $(NAME)
 
 clean:
-	rm -f ${NAME}
 
 fclean: clean
+	rm -f $(NAME)
 
 re: fclean all
+
+.PHONY: all clean fclean re
