--- a/cpp00/ex02/Makefile
+++ b/cpp00/ex02/Makefile
@@ -1,5 +1,5 @@
 FLAGS := -Wall -Wextra -Werror -std=c++98
-NAME := phonebook
+NAME := account
 FILES := Account.cpp tests.cpp
 
 all: ${NAME}
@@ -8,8 +8,10 @@ ${NAME}: ${FILES}
 	g++ ${FLAGS} ${FILES} -o ${NAME}
 
 clean:
-	rm -f ${NAME}
 
 fclean: clean
+	rm -f ${NAME}
 
 re: fclean all
+
+.PHONY: all clean fclean re
