update make and header to match guard name with the extention

--- a/cpp01/ex00/Makefile
+++ b/cpp01/ex00/Makefile
@@ -1,15 +1,27 @@
 FLAGS := -Wall -Wextra -Werror
-NAME := zombie
-FILES := main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
+NAME := ex00
 
-all: ${NAME}
+OBJDIR := obj
 
-${NAME}: ${FILES}
-	g++ ${FLAGS} ${FILES} -o ${NAME}
+SRCS := main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
+OBJS := $(SRCS:.cpp=.o)
+OBJS := $(addprefix $(OBJDIR)/, $(OBJS))
+
+all: $(NAME)
+
+$(NAME): $(OBJS)
+	g++ $(FLAGS) $(OBJS) -o $(NAME)
+
+$(OBJDIR)/%.o: %.cpp
+	@mkdir -p $(OBJDIR)
+	g++ $(FLAGS) -c $< -o $@
 
 clean:
-	rm -f ${NAME}
+	@rm -rf $(OBJDIR)
 
 fclean: clean
+	@rm -f $(NAME)
 
 re: fclean all
+
+.PHONY: all clean fclean re
